fix deprecation issue